--- a/package.json
+++ b/package.json
@@ -1,13 +1,52 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "concurrently -n php,js -c blue,yellow \"bun run dev:php\" \"bun run dev:js\"",
+    "dev:php": "php artisan serve",
+    "dev:js": "vite",
+    "build": "tsc && vite build",
+    "prepare": "husky",
+    "lint": "eslint --fix .",
+    "format": "prettier 'resources/{js,jsx}/**/*.{js,jsx}' --write",
+    "pre-commit": "bun run format && lint-staged && pretty-quick --staged"
+  },
+  "devDependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@inertiajs/react": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.6.4",
+    "concurrently": "^8.2.2",
+    "eslint": "^9.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.0.11",
+    "laravel-vite-plugin": "^1.0",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.31",
+    "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^5.0.2",
+    "vite": "^5.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
+  }
 }
