--- a/.env
+++ b/.env
@@ -20,7 +20,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
+# for common connection
 DB_HOST=mysql
+# for migration using sail
+# DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ams
 DB_USERNAME=sail
