--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "dev": "concurrently -n php,js -c blue,yellow \"bun run dev:php\" \"bun run dev:js\"",
     "dev:php": "php artisan serve",
     "dev:js": "vite",
+    "start": "concurrently -n php,js -c blue,yellow \"bun run start:php\" \"bun run start:js\"",
+    "start:php": "php artisan serve",
+    "start:js": "php artisan inertia:start-ssr",
     "format": "prettier . '**/*.{ts,tsx}' --write",
-    "build": "vue-tsc && vite build && vite build --ssr",
+    "build": "tsc && vite build && vite build --ssr",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -31,14 +34,18 @@
     "vite": "^5.0"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
