feat(CRUD): ✨ Done setup document scheme to be able CRUD

--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
   "license": "MIT",
   "require": {
     "php": "^8.2",
+    "cyberwizard/dbsafeguard": "dev-main",
     "inertiajs/inertia-laravel": "^1.0",
     "laravel/framework": "^11.0",
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
+    "phpoffice/phpspreadsheet": "^2.1",
     "tightenco/ziggy": "^2.0"
   },
   "require-dev": {
