--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "dev": "concurrently -n php,js -c blue,yellow \"bun run dev:php\" \"bun run dev:js\"",
     "dev:php": "php artisan serve",
     "dev:js": "vite",
-    "start": "concurrently -n php,js -c blue,yellow \"bun run start:php\" \"bun run start:js\"",
-    "start:php": "php artisan serve",
-    "start:js": "php artisan inertia:start-ssr",
     "format": "prettier . '**/*.{ts,tsx}' --write",
-    "build": "tsc && vite build && vite build --ssr",
+    "build": "tsc && vite build",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -44,12 +41,18 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@tanstack/react-table": "^8.16.0",
+    "apexcharts": "^3.49.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "next-themes": "^0.3.0",
+    "react-apexcharts": "^1.4.1",
+    "react-day-picker": "^8.10.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
