feat(docker): ✨ update docker config

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@
 server {
     listen 8000;
     index index.php index.html;
-    server_name _;
+    server_name nopal-ams.zenta.dev;
     root /var/www/html/public;
 
     error_log  stderr warn;
